fix for table overflow-x

--- a/src/modules/note/components/note-content/note-content.component.scss
+++ b/src/modules/note/components/note-content/note-content.component.scss
@@ -5,12 +5,4 @@
 
 	@extend %flex-column;
 
-	table {
-
-		display		: block;
-		overflow-x	: auto;
-		width		: 100%;
-
-	}
-
 }
